%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{User-visible changes}{
%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{Bug fixes}{
%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{Internal changes}{
%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{Documentation}{
%%     \itemize{
%%       \item
%%     }
%%   }
%% }
\section{Changes in pls version 2.8-1}{
  \subsection{New features}{
    \itemize{
      \item Added vcov() for computing variance-covariance matrices for PCR.
    }
  }
}
\section{Changes in pls version 2.8-0}{
  \subsection{Documentation}{
    \itemize{
      \item Converted documentation from .Rd to roxygen2.
    }
  }
  \subsection{New features}{
    \itemize{
      \item Added support for straified cross-validation segments through stratify argument.
    }
  }
}
\section{Changes in pls version 2.7-3}{
  \subsection{Internal changes}{
    \itemize{
      \item Small code cleanups and standardization of white space,
      indentation, etc.
      \item Fixes in test suite for MKL.
    }
  }
}
\section{Changes in pls version 2.7-2}{
  \subsection{Bug fixes}{
    \itemize{
      \item mvr() did not send the "center" argument to mvrCv(),
      resulting in wrong cross-validation results with 'center = FALSE'.
    }
  }
}
\section{Changes in pls version 2.7-1}{
  \subsection{Internal changes}{
    \itemize{
      \item Added temporary workaround in package tests for changes in RNG.
    }
  }
}
\section{Changes in pls version 2.7-0}{
  \subsection{New features}{
    \itemize{
      \item Now supports turning off the default centering of predictor
      and response matrices, through a new argument `center' to mvr()
      etal.  Suggested and implemented by Paul Hiemstra.
      \item Added argument `maxit' to oscorespls.fit(), to avoid a
      possible infinite loop for some near-orthoginal predictor
      matrices.  Suggested by Martin Binder.
    }
  }
  \subsection{Internal changes}{