@@ -1,7 +1,7 @@
 Package: pls
 Title: Partial Least Squares and Principal Component Regression
-Version: 2.8-1
-Date: 2022-07-14
+Version: 2.8-2
+Date: 2023-05-19
 Authors@R: c(person("Kristian Hovde", "Liland", role = c("aut", "cre"),
                     email = "kristian.liland@nmbu.no"),
 	     person("Bjørn-Helge", "Mevik", role = "aut" ,
@@ -24,8 +24,8 @@ Suggests: MASS, parallel, Rmpi, testthat, RUnit
 License: GPL-2
 URL: https://github.com/khliland/pls
 BugReports: https://github.com/khliland/pls/issues
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.3
 NeedsCompilation: no
-Packaged: 2022-07-14 20:59:01 UTC; kristian
+Packaged: 2023-05-19 06:32:20 UTC; kristian
 Repository: CRAN
-Date/Publication: 2022-07-16 07:30:20 UTC
+Date/Publication: 2023-05-19 07:10:02 UTC
