@@ -1,5 +1,5 @@
-7ee2edf5cd6ec74b9eb39d1c2998a38c *DESCRIPTION
-a6ff071fdc6af55b526c53821a682727 *NAMESPACE
+a408ce567dd9dc29d5172c910b8a6d74 *DESCRIPTION
+d56f1f367cbb8a5683f48b605c5ec0a7 *NAMESPACE
 6aff3e51c9a61c9585cc862258cd0107 *R/cppls.fit.R
 edc922226cb4948f467fef6c9b8a7a89 *R/crossval.R
 3e52c63ee7eb679182cee94e6ee7d07c *R/cvsegments.R
@@ -19,19 +19,19 @@ c718b92b4aa248d917a682b77bd039fa *R/ncomp.R
 791f85d02a2d244dd8221f69e0db5e3a *R/predict.mvr.R
 6d7a8b899a4175b53bc043b19eb8b681 *R/simpls.fit.R
 d8b17518b772dd1ab6f640c5bd224e38 *R/stdize.R
-844c75f8e02b9e227f4adb3346270bfc *R/summaries.R
+cd27ce43cde1811f3c66fadd277d18fa *R/summaries.R
 5e628dd4ad8e4bb4313725794a096e67 *R/svdpc.fit.R
 73522ebd417f156cc3b3a81a3a65d42f *R/vcov.R
 45c5b5812b875f3357ce7e2e11f759c0 *R/widekernelpls.fit.R
-2563de396db4df1a009ad84c086d4d1a *build/vignette.rds
+3e9583fe70e715a079e4ab95fa03f206 *build/vignette.rds
 adeacdc53581b3e39a306bf63a3f67cd *data/gasoline.RData
 5dc7dfe2d3e834cb1a6e72f7ba0a7284 *data/mayonnaise.RData
 02c5a3997472948f355c1a649f225223 *data/oliveoil.RData
 f24754568608e246656c9837d77c980d *data/yarn.RData
-cc89c09574b9025d9354bfb7b6b13bdc *inst/NEWS.Rd
+70f052ba52530d54477250818e3f51dd *inst/NEWS.Rd
 5146abacc209c3421dbdf95f31085b20 *inst/doc/pls-manual.R
 1332c9ae5d492d559d42e5007561570c *inst/doc/pls-manual.Rnw
-86b9b0ef109b24686bb88a583e6c7d99 *inst/doc/pls-manual.pdf
+da0bee671387268ddf2dd4d855cf8824 *inst/doc/pls-manual.pdf
 f248b3017ea4007da66e9e6782cb1676 *man/biplot.mvr.Rd
 738e68a8ebfa4348f28e756b6f860b98 *man/coef.mvr.Rd
 bbb9b1889c25b02cb30d3bc591be7483 *man/coefplot.Rd
@@ -60,7 +60,7 @@ bfc09c6c83e9b32ea1d686255ff217bb *man/scores.Rd
 b3e68221962413a2d8f1262d5b2b1dc2 *man/selectNcomp.Rd
 9a786750e4bba40fef0a83927e38f94f *man/simpls.fit.Rd
 aeb3a705b34215bd4a1fd11dff663c51 *man/stdize.Rd
-ec7223e87ae23b0f782a9bb3d849a25c *man/summary.mvr.Rd
+bc6f46109da6a6f5c56fb79a2eaae122 *man/summary.mvr.Rd
 77ae08c224a6f3e50ece3f3613e9d35d *man/svdpc.fit.Rd
 070e9eeca8a10595d2f66d769a0f4e74 *man/validationplot.Rd
 1668e7ff5f305894b24eaf1ff888d391 *man/var.jack.Rd
