@@ -4,6 +4,7 @@
 \alias{print.mvr}
 \alias{summary.mvr}
 \alias{print.mvrVal}
+\alias{as.data.frame.mvrVal}
 \title{Summary and Print Methods for PLSR and PCR objects}
 \usage{
 \method{print}{mvr}(x, ...)
@@ -17,6 +18,8 @@
 )
 
 \method{print}{mvrVal}(x, digits = 4, print.gap = 2, ...)
+
+\method{as.data.frame}{mvrVal}(x, row.names = NULL, optional = FALSE, shortAlgs = TRUE, ...)
 }
 \arguments{
 \item{x, object}{an \code{mvr} object}
@@ -29,6 +32,12 @@
 Default is 4.}
 
 \item{print.gap}{Integer.  Gap between coloumns of the printed tables.}
+
+\item{row.names}{NULL or a character vector giving the row names for the data frame. Missing values are not allowed.}
+
+\item{optional}{Not used, only included to match signature of \code{as.data.frame}.}
+
+\item{shortAlgs}{Logical.  Shorten algorithm names (default = TRUE).}
 }
 \value{
 \code{print.mvr} and \code{print.mvrVal} return the object
@@ -49,6 +58,9 @@ nir.mvr <- mvr(density ~ NIR, ncomp = 8, validation = "LOO", data = yarn)
 nir.mvr
 summary(nir.mvr)
 RMSEP(nir.mvr)
+# Extract MVR validation statistics as data.frame:
+as.data.frame(RMSEP(nir.mvr, estimate = "CV"))
+as.data.frame(R2(nir.mvr))
 
 }
 \seealso{
